@@ -5,7 +5,7 @@ import warnings
 from xml.dom.minidom import parseString
 
 from .generic import PdfObject
-from .utils import u_
+from .utils import DEPR_MSG, u_
 
 RDF_NAMESPACE = "http://www.w3.org/1999/02/22-rdf-syntax-ns#"
 DC_NAMESPACE = "http://purl.org/dc/elements/1.1/"
@@ -78,18 +78,24 @@ class XmpInformation(PdfObject):
         )
         self.write_to_stream(stream, encryption_key)
 
-    def getElement(self, aboutUri, namespace, name):
+    def get_element(self, about_uri, namespace, name):
         for desc in self.rdfRoot.getElementsByTagNameNS(RDF_NAMESPACE, "Description"):
-            if desc.getAttributeNS(RDF_NAMESPACE, "about") == aboutUri:
+            if desc.getAttributeNS(RDF_NAMESPACE, "about") == about_uri:
                 attr = desc.getAttributeNodeNS(namespace, name)
                 if attr is not None:
                     yield attr
                 for element in desc.getElementsByTagNameNS(namespace, name):
                     yield element
 
-    def getNodesInNamespace(self, aboutUri, namespace):
+    def getElement(self, aboutUri, namespace, name):
+        warnings.warn(
+            DEPR_MSG.format("getElement", "get_element"),
+        )
+        return self.get_element(aboutUri, namespace, name)
+
+    def get_nodes_in_namespace(self, about_uri, namespace):
         for desc in self.rdfRoot.getElementsByTagNameNS(RDF_NAMESPACE, "Description"):
-            if desc.getAttributeNS(RDF_NAMESPACE, "about") == aboutUri:
+            if desc.getAttributeNS(RDF_NAMESPACE, "about") == about_uri:
                 for i in range(desc.attributes.length):
                     attr = desc.attributes.item(i)
                     if attr.namespaceURI == namespace:
@@ -97,6 +103,12 @@ class XmpInformation(PdfObject):
                 for child in desc.childNodes:
                     if child.namespaceURI == namespace:
                         yield child
+
+    def getNodesInNamespace(self, aboutUri, namespace):
+        warnings.warn(
+            DEPR_MSG.format("getNodesInNamespace", "get_nodes_in_namespace"),
+        )
+        return self.get_nodes_in_namespace(aboutUri, namespace)
 
     def _get_text(self, element):
         text = ""
@@ -377,7 +389,7 @@ class XmpInformation(PdfObject):
     def custom_properties(self):
         if not hasattr(self, "_custom_properties"):
             self._custom_properties = {}
-            for node in self.getNodesInNamespace("", PDFX_NAMESPACE):
+            for node in self.get_nodes_in_namespace("", PDFX_NAMESPACE):
                 key = node.localName
                 while True:
                     # see documentation about PDFX_NAMESPACE earlier in file
